- ProgressBarBase renamed to ProgressBase, LinearProgressBar renamed to ProgressBar, CircularProgressBar renamed to ProgressRing - Fixed errors in Russian documentation - Fixed errors in styles - Fixed progress bars animations

--- a/Source code/Elysium.Test/MainWindow.xaml
+++ b/Source code/Elysium.Test/MainWindow.xaml
@@ -742,96 +742,96 @@
                         Orientation="Vertical"
                         Value="6"
                         Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="4"
+                <metro:ProgressBar Grid.Column="4"
                                          Grid.Row="0"
                                          IsEnabled="False"
                                          Orientation="Horizontal"
                                          Value="70"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="4"
+                <metro:ProgressBar Grid.Column="4"
                                          Grid.Row="1"
                                          Orientation="Horizontal"
                                          Value="70"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="4"
+                <metro:ProgressBar Grid.Column="4"
                                          Grid.Row="2"
                                          IsEnabled="False"
                                          Orientation="Vertical"
                                          Value="45"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="4"
+                <metro:ProgressBar Grid.Column="4"
                                          Grid.Row="3"
                                          Orientation="Vertical"
                                          Value="45"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="5"
+                <metro:ProgressBar Grid.Column="5"
                                          Grid.Row="0"
                                          IsEnabled="False"
                                          Orientation="Horizontal"
                                          State="Indeterminate"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="5"
+                <metro:ProgressBar Grid.Column="5"
                                          Grid.Row="1"
                                          Orientation="Horizontal"
                                          State="Indeterminate"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="5"
+                <metro:ProgressBar Grid.Column="5"
                                          Grid.Row="2"
                                          IsEnabled="False"
                                          Orientation="Vertical"
                                          State="Indeterminate"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="5"
+                <metro:ProgressBar Grid.Column="5"
                                          Grid.Row="3"
                                          Orientation="Vertical"
                                          State="Indeterminate"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="6"
+                <metro:ProgressBar Grid.Column="6"
                                          Grid.Row="0"
                                          IsEnabled="False"
                                          Orientation="Horizontal"
                                          State="Busy"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="6"
+                <metro:ProgressBar Grid.Column="6"
                                          Grid.Row="1"
                                          Orientation="Horizontal"
                                          State="Busy"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="6"
+                <metro:ProgressBar Grid.Column="6"
                                          Grid.Row="2"
                                          IsEnabled="False"
                                          Orientation="Vertical"
                                          State="Busy"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:LinearProgressBar Grid.Column="6"
+                <metro:ProgressBar Grid.Column="6"
                                          Grid.Row="3"
                                          Orientation="Vertical"
                                          State="Busy"
                                          Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="7"
+                <metro:ProgressRing Grid.Column="7"
                                            Grid.Row="0"
                                            IsEnabled="False"
                                            Value="65"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="7"
+                <metro:ProgressRing Grid.Column="7"
                                            Grid.Row="1"
                                            Value="65"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="8"
+                <metro:ProgressRing Grid.Column="8"
                                            Grid.Row="0"
                                            IsEnabled="False"
                                            State="Indeterminate"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="8"
+                <metro:ProgressRing Grid.Column="8"
                                            Grid.Row="1"
                                            State="Indeterminate"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="9"
+                <metro:ProgressRing Grid.Column="9"
                                            Grid.Row="0"
                                            IsEnabled="False"
                                            State="Busy"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
-                <metro:CircularProgressBar Grid.Column="9"
+                <metro:ProgressRing Grid.Column="9"
                                            Grid.Row="1"
                                            State="Busy"
                                            Margin="{Binding RelativeSource={RelativeSource Self}, Path=(params:General.BoldPadding), Mode=OneWay}"/>
